done WritingCommentItineraries method
